# MSOpenGLES

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/msopengles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseSample.cpp  BaseSample.h  BasicLightingSample.cpp  BasicLightingSample.h  CMakeLists.txt  FBOSample.cpp  FBOSample.h  GLSampleBase.cpp  GLSampleBase.h  GLUtils.cpp  GLUtils.h  ImageDef.h  MSGLPrimitivesDef.h  MSGLRenderContext.cpp  MSGLRenderContext.h  MSVAOExample.cpp  MSVAOExample.h  NV21TextureMapSample.cpp  NV21TextureMapSample.h  TextureBitmapSample.cpp  TextureBitmapSample.h  TextureMapSample.cpp  TextureMapSample.h  TriangleSample.cpp  TriangleSample.h  jni_ffmpeg_helper.cpp  jni_helper.cpp  jni_opengles_helper.cpp  native-lib.cpp
app/src/main/java/com/example/: App.java  FFmpegConfigInfoActivity.java  SplashActivity.java
app/src/main/java/com/example/capture/: BaseRenderActivity.java  ByteFlowRender.java  GLByteFlowRender.java  MSCamera2FrameCallback.java  MSCaptureActivity.java
app/src/main/java/com/example/msopengles/: App.java  BaseActivity.java  LiveCameraActivity.java  MSPlay.java  MainActivity.java  OpenGLESMenuActivity.java  PlayYUVActivity.java
app/src/main/res/layout/: activity_common.xml  activity_ffmpeg_config_info.xml  activity_live_camera.xml  activity_main.xml  activity_mscapture.xml  activity_open_glesactivity.xml  activity_play_yuvactivity.xml  activity_show_bitmap.xml  activity_splash.xml  activity_video.xml  activity_video_play_by_media_codec.xml  content_main_1.xml
app/src/main/res/raw/: fragment_nv21_texture_map.glsl  fragment_texture_map.glsl  fragment_triangle.glsl  fragment_vao.glsl  vertex_nv21_texture_map.glsl  vertex_triangle.glsl  vertex_vao.glsl  vertext_texture_map.glsl
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+52 files in other folders)
